# davinci_audio_importer

./: LICENSE  README.md  README_EN.md  __scratch_code__.py  add_wav_file  davinci_media_item.py  hello.py  item_arranger.py  item_creator.py  main.py  pyproject.toml  resolve_api_init.py
typings/: DaVinciResolveScript.pyi
