[project]
name = "davinci-importer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "dftt-timecode>=0.0.14",
    "fusionscript-stubs>=19.1",
    "ipdb>=0.13.13",
    "ipython>=8.30.0",
]

[tool.pyright]
extraPaths = [
    "C:/ProgramData/Blackmagic Design/DaVinci Resolve/Support/Developer/Scripting/Modules"
]
